; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_socket_tcp.c_ngx_http_lua_socket_add_pending_data.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_socket_tcp.c_ngx_http_lua_socket_add_pending_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32*, i32* }

@.str = private unnamed_addr constant [26 x i8] c"resuming data: %d: [%.*s]\00", align 1
@NGX_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [35 x i8] c"need more buffers because %d != %d\00", align 1
@NGX_ERROR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.TYPE_7__*, i32*, i64, i32*, i32, i32)* @ngx_http_lua_socket_add_pending_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_http_lua_socket_add_pending_data(i32* %0, %struct.TYPE_7__* %1, i32* %2, i64 %3, i32* %4, i32 %5, i32 %6) #0 {
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_7__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %9, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %10, align 8
  store i32* %2, i32** %11, align 8
  store i64 %3, i64* %12, align 8
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %18 = load i32, i32* %14, align 4
  %19 = load i32, i32* %14, align 4
  %20 = load i32*, i32** %13, align 8
  %21 = call i32 (i8*, i32, i32, ...) @dd(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %18, i32 %19, i32* %20)
  %22 = load i32*, i32** %11, align 8
  %23 = load i64, i64* %12, align 8
  %24 = getelementptr inbounds i32, i32* %22, i64 %23
  store i32* %24, i32** %16, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %28, align 8
  store %struct.TYPE_8__* %29, %struct.TYPE_8__** %17, align 8
  %30 = load i32*, i32** %16, align 8
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = ptrtoint i32* %30 to i64
  %35 = ptrtoint i32* %33 to i64
  %36 = sub i64 %34, %35
  %37 = sdiv exact i64 %36, 4
  %38 = load i32, i32* %15, align 4
  %39 = sext i32 %38 to i64
  %40 = icmp eq i64 %37, %39
  br i1 %40, label %41, label %49

41:                                               ; preds = %7
  %42 = load i32, i32* %14, align 4
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %43, i32 0, i32 0
  %45 = load i32*, i32** %44, align 8
  %46 = sext i32 %42 to i64
  %47 = getelementptr inbounds i32, i32* %45, i64 %46
  store i32* %47, i32** %44, align 8
  %48 = load i64, i64* @NGX_OK, align 8
  store i64 %48, i64* %8, align 8
  br label %78

49:                                               ; preds = %7
  %50 = load i32*, i32** %16, align 8
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 0
  %53 = load i32*, i32** %52, align 8
  %54 = ptrtoint i32* %50 to i64
  %55 = ptrtoint i32* %53 to i64
  %56 = sub i64 %54, %55
  %57 = sdiv exact i64 %56, 4
  %58 = trunc i64 %57 to i32
  %59 = load i32, i32* %15, align 4
  %60 = call i32 (i8*, i32, i32, ...) @dd(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i32 %58, i32 %59)
  %61 = load i32*, i32** %9, align 8
  %62 = load %struct.TYPE_7__*, %struct.TYPE_7__** %10, align 8
  %63 = load i32*, i32** %13, align 8
  %64 = load i32, i32* %14, align 4
  %65 = call i64 @ngx_http_lua_socket_insert_buffer(i32* %61, %struct.TYPE_7__* %62, i32* %63, i32 %64)
  %66 = load i64, i64* @NGX_OK, align 8
  %67 = icmp ne i64 %65, %66
  br i1 %67, label %68, label %70

68:                                               ; preds = %49
  %69 = load i64, i64* @NGX_ERROR, align 8
  store i64 %69, i64* %8, align 8
  br label %78

70:                                               ; preds = %49
  %71 = load i32*, i32** %16, align 8
  %72 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %73 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %72, i32 0, i32 1
  store i32* %71, i32** %73, align 8
  %74 = load i32*, i32** %16, align 8
  %75 = load %struct.TYPE_8__*, %struct.TYPE_8__** %17, align 8
  %76 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %75, i32 0, i32 0
  store i32* %74, i32** %76, align 8
  %77 = load i64, i64* @NGX_OK, align 8
  store i64 %77, i64* %8, align 8
  br label %78

78:                                               ; preds = %70, %68, %41
  %79 = load i64, i64* %8, align 8
  ret i64 %79
}

declare dso_local i32 @dd(i8*, i32, i32, ...) #1

declare dso_local i64 @ngx_http_lua_socket_insert_buffer(i32*, %struct.TYPE_7__*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
